[package]
name = "archer"
version = "0.1.0"
authors = ["echnobas <echnobas.git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-rs = { git = "https://github.com/feed-rs/feed-rs" }
regex = "1.4.5"
colored = "2"
ureq = "2.1.0"

